<resources>
    <string name="app_name">Doshkify</string>
    <!--    Drawer main menu strings-->
    <string name="main_menu_ad">My advertisements</string>
    <string name="main_menu_ad_my">My advertisements</string>
    <string name="main_menu_ad_cars">Cars</string>
    <string name="main_menu_ad_pc">PC and laptops</string>
    <string name="main_menu_ad_phones">Smartphones</string>
    <string name="main_menu_ad_electronics">Electronics</string>
    <string name="main_menu_account">Account</string>
    <string name="main_menu_account_sign_up">Sign up</string>
    <string name="main_menu_account_log_in">Log in</string>
    <string name="main_menu_account_log_out">Log out</string>
    <string name="main_menu_not_signup">Sign up or log in</string>

    <!--    Sign dialog-->
    <string name="sign_dialog_title">Create account</string>
    <string name="log_in_dialog_title">Log in</string>
    <string name="sign_dialog_email_hint">E-mail</string>
    <string name="sign_dialog_password_hint">Password</string>
    <string name="sign_dialog_forgot_password">Forgot password</string>
    <string name="sign_dialog_button">Sign up</string>
    <string name="log_in_dialog_button">Log in</string>
    <string name="sign_dialog_sign_in_with_google">Sign up with Google</string>
    <string name="sign_dialog_log_in_with_google">Log in with Google</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="error_enter_correct_email">Enter correct email!</string>
    <string name="error_enter_correct_password">Enter correct password!</string>
    <string name="error_email_already_in_use">This email address already in use!</string>
    <string name="error_invalid_email">Invalid email, try again!</string>
    <string name="error_weak_password">Weak password (Min length: 7)!</string>
    <string name="error_wrong_password">Wrong password!</string>
    <string name="error_linked_mail">You already have a Google account with this email address. Login first and try again!</string>
    <string name="error_user_not_found">User not found!</string>
    <string name="success_email_verification_send">Verification letter send to your email account. Verify and log in!</string>
    <string name="success_log_in">Welcome back!</string>
    <string name="success_linked_email">Email successfully linked to your Google account!</string>
</resources>